kubernetes/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui-deployment
  labels:
    app: swagger-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: swagger-ui
  template:
    metadata:
      labels:
        app: swagger-ui
    spec:
      containers:
        - name: swagger-ui
          image: infrastructure/front_end_multiple_domain_swagger:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 10m
              memory: 265Mi
          readinessProbe:
            httpGet:
              path: /SwaggerUI/actuator/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /SwaggerUI/actuator/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
