kubernetes/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui-service
  labels:
    app: swagger-ui
spec:
  selector:
    app: swagger-ui
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
